# Erase-un-combate

./: .gitignore  Animacion.cpp  Animacion.hpp  AnimacionAgrandable.cpp  AnimacionAgrandable.hpp  AnimacionConGravedad.cpp  AnimacionConGravedad.hpp  AnimacionPorFrames.cpp  AnimacionPorFrames.hpp  AtaqueEspecial.cpp  AtaqueEspecial.hpp  Bitacora.cpp  Bitacora.hpp  CMakeLists.txt  Combate.cpp  Combate.hpp  ConectorOnline.hpp  Constantes.hpp  ContenedorDeEfectos.cpp  ContenedorDeEfectos.hpp  ContenedorDePersonajes.cpp  ContenedorDePersonajes.hpp  ContenedorDeRecursos.cpp  ContenedorDeRecursos.hpp  ContenedorDeRecursos.tpp  EjemploFormatoExtendido.txt  Enums.hpp  Escenario.cpp  Escenario.hpp  GUIPersonaje.cpp  GUIPersonaje.hpp  GestorDeControles.cpp  GestorDeControles.hpp  Hitbox.cpp  Hitbox.hpp  IndicacionesSobreAnimacion.hpp  JuanCuesta.cpp  JuanCuesta.hpp  Makefile  Personaje.cpp  (+21 more)
ficheros/: personajes.txt
ficheros/efectos/: bloqueado.txt  bloqueado.yaml  cartel-a-pelear.txt  cartel-a-pelear.yaml  cartel-empate.txt  cartel-empate.yaml  cartel-jugador-2-gana.yaml  cartel-todo-listo.txt  cartel-todo-listo.yaml  disparo-juan-cuesta.txt  disparo-juan-cuesta.yaml  golpeado-grande.txt  golpeado-medio.txt  golpeado-medio.yaml  golpeado-peque.txt  golpeado-peque.yaml  golpeado-super.yaml  menu-seleccion-personaje-destello-selector.yaml  particula-golpeado-3.yaml  particula-golpeado-peque-3.txt  particula-lineal-peque.yaml  polvo.txt  polvo.yaml  selector-modo-historia-destello.txt  selector-opciones-destello.yaml  super-cargada-j2-destello.yaml  titulo.txt  titulo.yaml
ficheros/personajes/: andres-guerra.txt  andres-guerra.yaml  juan-cuesta-con-casco.txt  juan-cuesta-con-casco.yaml  juan-cuesta-sin-casco.txt  juan-cuesta-sin-casco.yaml
musica/: menu-eleccion-personaje.dnm  menu-principal.dnm  selector-mando.dnm
musica/combate/: quedate.dnm
shaders/: blendColor.frag
sonidos/combos/: continuar-combo-j2.dnm  continuar-combo.dnm  terminar-combo-j2.dnm  terminar-combo.dnm
sonidos/efectos/: cartel-a-pelear.dnm  cartel-empate.dnm  cartel-jugador-1-gana.dnm  cartel-jugador-1-perfecto.dnm  cartel-jugador-2-gana.dnm  cartel-jugador-2-perfecto.dnm  cartel-todo-listo.ftm  super-cargada-j1-destello.dnm  super-cargada-j2-destello.dnm
sonidos/juan-cuesta-con-casco/: ataque-aereo.dnm  ataque-normal-3.dnm  golpeado-peque.dnm  preparando-super.dnm
sonidos/juan-cuesta-sin-casco/: andando-alejandose.dnm  bloqueando.dnm
sonidos/menu-principal/: cambiar-seleccion.dnm  seleccionar.dnm
sonidos/menu-seleccion-personaje/: jugador-1-derecha.dnm  jugador-1-elegir.dnm  jugador-1-izquierda.dnm  jugador-1-rechazar.dnm  jugador-2-derecha.dnm  jugador-2-elegir.dnm  jugador-2-izquierda.dnm  jugador-2-rechazar.dnm
sonidos/personajes/andres-guerra/: andando-acercandose.dnm  andando-alejandose.dnm  bloqueando.dnm  golpeado-medio.dnm  golpeado-peque.dnm
sonidos/personajes/juan-cuesta-con-casco/: ataque-agachado.dnm  ataque-normal-2.dnm  ataque-super.dnm  golpeado-subiendo.dnm  saltando-subiendo.dnm  tocando-suelo.dnm
sonidos/personajes/juan-cuesta-sin-casco/: ataque-acercandose.dnm  ataque-agachado.dnm  ataque-alejandose.dnm  ataque-especial.dnm  corriendo.dnm  esquive-super.dnm  frenando.dnm  golpeado-medio.dnm  golpeado-super.dnm  preparando-super.dnm  saltando-subiendo.dnm
sonidos/seleccionar-mando/: aparece-ventana.dnm  cambiar-seleccion.dnm  desaparece-ventana.dnm
sprites/escenarios/: fachada-erase-unos-estatutos.pdn
sprites/personajes/juan-cuesta-sin-casco/: esquive-super.pdn
sprites/selector-mando/: jugador1.pdn  jugador2.pdn  nuevoselector.pdn
src/: Animacion.cpp  Animacion.hpp  AnimacionAgrandable.cpp  AnimacionAgrandable.hpp  AnimacionConGravedad.cpp  AnimacionConGravedad.hpp  AnimacionDesvaneciente.cpp  AnimacionDesvaneciente.hpp  AnimacionPorFrames.cpp  AnimacionPorFrames.hpp  AtaqueEspecial.hpp  CMakeLists.txt  Combate.cpp  Combate.hpp  ConectorOnline.cpp  ConectorOnline.hpp  Constantes.hpp  ContenedorDeEfectos.cpp  ContenedorDePersonajes.cpp  ContenedorDePersonajes.hpp  ContenedorDeRecursos.hpp  Enums.hpp  Escenario.cpp  Escenario.hpp  GUIPersonaje.cpp  GUIPersonaje.hpp  GestorDeControles.cpp  GestorDeControles.hpp  Hitbox.hpp  IndicacionesSobreAnimacion.hpp  MenuPrincipal.cpp  MenuPrincipal.hpp  Personaje.cpp  Personaje.hpp  README.md  ReproductorDeMusica.cpp  ReproductorDeMusica.hpp  ReproductorDeSonidos.hpp  SelectorJugadorParaMando.cpp  SelectorJugadorParaMando.hpp  (+5 more)
src/actualizador/: main.cpp
src/animaciones/: Animacion.cpp  Animacion.hpp  AnimacionAgrandable.cpp  AnimacionAgrandable.hpp  AnimacionConGravedad.cpp  AnimacionConGravedad.hpp  AnimacionDesvaneciente.cpp  AnimacionDesvaneciente.hpp  AnimacionParticulaLineal.cpp  AnimacionParticulaLineal.hpp  AnimacionPorFotogramas.cpp  AnimacionPorFotogramas.hpp  AnimacionPorFrames.cpp  AnimacionPorFrames.hpp  IndicacionesSobreAnimacion.hpp
src/combate/: AtaqueEspecial.cpp  AtaqueEspecial.hpp  Combate.cpp  Combate.hpp  ConectorOnline.cpp  ConectorOnline.hpp  ContadorDeCombos.cpp  ContadorDeCombos.hpp  ContenedorDeCombos.cpp  ContenedorDeCombos.hpp  Escenario.cpp  Escenario.hpp  GUIPersonaje.cpp  GUIPersonaje.hpp  Hitbox.cpp  Hitbox.hpp  InfoCombo.cpp  InfoCombo.hpp  Personaje.cpp  Personaje.hpp  Temporizador.cpp  Temporizador.hpp
src/general/: Bitacora.cpp  Bitacora.hpp  Configuracion.cpp  Configuracion.hpp  Constantes.hpp  Enums.hpp  Utilidades.cpp  Utilidades.hpp  VentanaPrincipal.cpp
src/menus/: FondoMenuPrincipal.cpp  FondoMenuPrincipal.hpp  FondoPersonaje.cpp  FondoPersonaje.hpp  MenuPrincipal.cpp  MenuPrincipal.hpp  MenuSeleccionPersonaje.cpp  MenuSeleccionPersonaje.hpp  SelectorMenuPrincipal.cpp  SelectorMenuPrincipal.hpp  SelectorPersonaje.cpp  SelectorPersonaje.hpp
src/recursos/: ContenedorDeEfectos.cpp  ContenedorDeEfectos.hpp  ContenedorDePersonajes.cpp  ContenedorDePersonajes.hpp  ContenedorDeRecursos.cpp  ContenedorDeRecursos.hpp  ContenedorDeRecursos.tpp  GestorDeControles.cpp  GestorDeControles.hpp  ReproductorDeMusica.hpp  ReproductorDeSonidos.cpp  ReproductorDeSonidos.hpp  SelectorJugadorParaMando.cpp
